create the html markup

--- a/code files/index.html
+++ b/code files/index.html
@@ -1,1 +1,247 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Homepage Project</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">      
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <div class="img-container">
+                <img src="" alt="clematins nwiibee">
+                <h1>Clematins Nwiibee</h1>
+            </div>
+            <div class="placard card">
+                <h3>About me</h3>
+                <main>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
+                    esse cillum dolore eu fugiat nulla pariatur.
+                </main>
+                <footer>
+                    <ul class ="flx">
+                        <li>
+                            <button type="button">
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                height="24" width="24" alt="github logo">
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button">
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg"
+                                height="24" width="24" alt="linkedIn logo">
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button">
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                                height="24" width="24" alt="x logo">
+                            </button>
+                        </li>
+                    </ul>
+                </footer>
+            </div>
+        </header>
+        <main>
+            <section id="my-work">
+                <h4>My Work</h4>
 
+                <div class="project-grid">
+                    <article class="card">
+                        <figure>
+                            <img src="#" alt="">
+                        </figure>
+                        <div class="flx">
+                            <h4>Project name</h4>
+                            <ul>
+                                <li>
+                                    <button type="button">
+                                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                        height="24" width="24" alt="github logo">
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                            Short description of the project. Just a couple of sentences will do.
+                        </p>
+                    </article>
+                    <article class="card">
+                        <figure>
+                            <img src="#" alt="">
+                        </figure>
+                        <div class="flx">
+                            <h4>Project name</h4>
+                            <ul>
+                                <li>
+                                    <button type="button">
+                                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                        height="24" width="24" alt="github logo">
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                            Short description of the project. Just a couple of sentences will do.
+                        </p>
+                    </article>
+                    <article class="card">
+                        <figure>
+                            <img src="#" alt="">
+                        </figure>
+                        <div class="flx">
+                            <h4>Project name</h4>
+                            <ul>
+                                <li>
+                                    <button type="button">
+                                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                        height="24" width="24" alt="github logo">
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                            Short description of the project. Just a couple of sentences will do.
+                        </p>
+                    </article>
+                    <article class="card">
+                        <figure>
+                            <img src="#" alt="">
+                        </figure>
+                        <div class="flx">
+                            <h4>Project name</h4>
+                            <ul>
+                                <li>
+                                    <button type="button">
+                                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                        height="24" width="24" alt="github logo">
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                            Short description of the project. Just a couple of sentences will do.
+                        </p>
+                    </article>
+                    <article class="card">
+                        <figure>
+                            <img src="#" alt="">
+                        </figure>
+                        <div class="flx">
+                            <h4>Project name</h4>
+                            <ul>
+                                <li>
+                                    <button type="button">
+                                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                        height="24" width="24" alt="github logo">
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                            Short description of the project. Just a couple of sentences will do.
+                        </p>
+                    </article>
+                    <article class="card">
+                        <figure>
+                            <img src="#" alt="">
+                        </figure>
+                        <div class="flx">
+                            <h4>Project name</h4>
+                            <ul>
+                                <li>
+                                    <button type="button">
+                                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                        height="24" width="24" alt="github logo">
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                            Short description of the project. Just a couple of sentences will do.
+                        </p>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="footer-conntainer">
+                <div class="left-footer">
+                    <h4>Contact me</h4>
+                    <p>Please  get in touch if you  think that  our work coule be mutually beneficial.</p>
+                    <p>ID's place Estate <br>
+                       Uniport Road, Rumualogu, Port Harcourt.
+                    </p>
+                    <div class="flx">
+                        <img src="/assets/phone-outline.svg" alt="phone ico">
+                        <p>+234-703-689-7471</p>
+                    </div>
+                    <div class="flx">
+                        <img src="/assets/email-outline.svg" alt="email icon">
+                        <p>2016clem@gmail.com</p>
+                    </div>
+                    <div>
+                       <ul class ="flx">
+                            <li>
+                                <button type="button">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                                    height="2   4" width="24" alt="github logo">
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg"
+                                    height="24" width="24" alt="linkedIn logo">
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                                    height="24" width="24" alt="x logo">
+                                </button>
+                            </li>
+                        </ul> 
+                    </div>
+                </div>
+                <div class="right-footer">
+                    <img src="/assets/rmbg_official.png" alt="Clematins Nwiibee">
+                </div>
+            </div>
+        </footer>
+    </div> 
+</body>
+</html>
