change buttons to anchor tags

--- a/code files/index.html
+++ b/code files/index.html
@@ -11,7 +11,6 @@
     <div class="container">
         <header>
             <div class="img-container">
-                <img src="" alt="clematins nwiibee">
                 <h1>Clematins Nwiibee</h1>
             </div>
             <div class="placard card">
@@ -25,22 +24,22 @@
                 <footer>
                     <ul class ="flx">
                         <li>
-                            <button type="button">
+                            <a href="https://github.com/Sorbari2016">
                                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                 height="24" width="24" alt="github logo">
-                            </button>
+                            </a>
                         </li>
                         <li>
-                            <button type="button">
+                            <a href="www.linkedin.com/in/clematins-nwiibee-77a179164">
                                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg"
                                 height="24" width="24" alt="linkedIn logo">
-                            </button>
+                            </a>
                         </li>
                         <li>
-                            <button type="button">
+                            <a href="https://x.com/clematins_?s=21">
                                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
                                 height="24" width="24" alt="x logo">
-                            </button>
+                            </a>
                         </li>
                     </ul>
                 </footer>
@@ -56,23 +55,23 @@
                             <img src="#" alt="">
                         </figure>
                         <div class="flx">
-                            <h4>Project name</h4>
+                            <h4>Restaurant page</h4>
                             <ul>
                                 <li>
-                                    <button type="button">
+                                    <a href="https://github.com/Sorbari2016/restaurant_page">
                                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                         height="24" width="24" alt="github logo">
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button">
-                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
-                                    </button>
+                                    <a href="https://sorbari2016.github.io/restaurant_page/" target="_blank">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="external link logo">  
+                                    </a>
                                 </li>
                             </ul>
                         </div>
                         <p>
-                            Short description of the project. Just a couple of sentences will do.
+                            Restaurant page project was aimed at learning how to create interactive tabs, using javaScript. 
                         </p>
                     </article>
                     <article class="card">
@@ -80,23 +79,23 @@
                             <img src="#" alt="">
                         </figure>
                         <div class="flx">
-                            <h4>Project name</h4>
+                            <h4>Simon Game</h4>
                             <ul>
                                 <li>
-                                    <button type="button">
+                                    <a href="https://github.com/Sorbari2016/simon_game">
                                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                         height="24" width="24" alt="github logo">
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button">
-                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
-                                    </button>
+                                    <a href="https://sorbari2016.github.io/simon_game/" target="_blank">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="external link logo">
+                                    </a>
                                 </li>
                             </ul>
                         </div>
                         <p>
-                            Short description of the project. Just a couple of sentences will do.
+                            For simon game project, I tried to build the classical Simon electronic game.
                         </p>
                     </article>
                     <article class="card">
@@ -104,23 +103,23 @@
                             <img src="#" alt="">
                         </figure>
                         <div class="flx">
-                            <h4>Project name</h4>
+                            <h4>Simple Calculator</h4>
                             <ul>
                                 <li>
-                                    <button type="button">
+                                    <a href="https://github.com/Sorbari2016/calculator">
                                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                         height="24" width="24" alt="github logo">
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button">
-                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
-                                    </button>
+                                    <a href="https://sorbari2016.github.io/calculator/" target="_blank">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="external link logo">
+                                    </a>
                                 </li>
                             </ul>
                         </div>
                         <p>
-                            Short description of the project. Just a couple of sentences will do.
+                            Here I built a very simple calculator using basic HTML, CSS, & JavaSscript. 
                         </p>
                     </article>
                     <article class="card">
@@ -128,23 +127,23 @@
                             <img src="#" alt="">
                         </figure>
                         <div class="flx">
-                            <h4>Project name</h4>
+                            <h4>Library</h4>
                             <ul>
                                 <li>
-                                    <button type="button">
+                                    <a href="https://github.com/Sorbari2016/library">
                                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                         height="24" width="24" alt="github logo">
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button">
-                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
-                                    </button>
+                                    <a href="https://sorbari2016.github.io/library/" target="_blank">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="external link logo">
+                                    </a> 
                                 </li>
                             </ul>
                         </div>
                         <p>
-                            Short description of the project. Just a couple of sentences will do.
+                            For this project, I created a simple library web application, with books' information in it.
                         </p>
                     </article>
                     <article class="card">
@@ -152,23 +151,23 @@
                             <img src="#" alt="">
                         </figure>
                         <div class="flx">
-                            <h4>Project name</h4>
+                            <h4>Drum kit</h4>
                             <ul>
                                 <li>
-                                    <button type="button">
+                                    <a href="https://github.com/Sorbari2016/drum_kit">
                                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                         height="24" width="24" alt="github logo">
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button">
-                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
-                                    </button>
+                                    <a href="https://sorbari2016.github.io/drum_kit/" target="_blank">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="external link logo">
+                                    </a> 
                                 </li>
                             </ul>
                         </div>
                         <p>
-                            Short description of the project. Just a couple of sentences will do.
+                            I tried to learn how to apply and use sounds. 
                         </p>
                     </article>
                     <article class="card">
@@ -176,23 +175,23 @@
                             <img src="#" alt="">
                         </figure>
                         <div class="flx">
-                            <h4>Project name</h4>
+                            <h4>Rock paper scissor game</h4>
                             <ul>
                                 <li>
-                                    <button type="button">
+                                    <a href="https://github.com/Sorbari2016/rock-paper-scissors">
                                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                                         height="24" width="24" alt="github logo">
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button">
-                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="">
-                                    </button>
+                                    <a href="https://sorbari2016.github.io/rock-paper-scissors/" target="_blank">
+                                        <img src="/assets/open-in-new.svg " height="24" width="24" alt="external link logo">
+                                    </a> 
                                 </li>
                             </ul>
                         </div>
                         <p>
-                            Short description of the project. Just a couple of sentences will do.
+                            This was my first game I ever made, and it helped me to understand javaScript a bit. 
                         </p>
                     </article>
                 </div>
@@ -208,31 +207,31 @@
                     </p>
                     <div class="flx">
                         <img src="/assets/phone-outline.svg" alt="phone ico">
-                        <p>+234-703-689-7471</p>
+                        <a href="tel:+2347036897471">+2347036897471</a>
                     </div>
                     <div class="flx">
                         <img src="/assets/email-outline.svg" alt="email icon">
-                        <p>2016clem@gmail.com</p>
+                        <a href="mailto:2016clem@gmail.com">2016clem@gmail.com</a>
                     </div>
                     <div>
-                       <ul class ="flx">
+                        <ul class ="flx">
                             <li>
-                                <button type="button">
+                                <a href="https://github.com/Sorbari2016">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
-                                    height="2   4" width="24" alt="github logo">
-                                </button>
+                                    height="24" width="24" alt="github logo">
+                                </a>
                             </li>
                             <li>
-                                <button type="button">
+                                <a href="www.linkedin.com/in/clematins-nwiibee-77a179164">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg"
                                     height="24" width="24" alt="linkedIn logo">
-                                </button>
+                                </a>
                             </li>
                             <li>
-                                <button type="button">
+                                <a href="https://x.com/clematins_?s=21">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
                                     height="24" width="24" alt="x logo">
-                                </button>
+                                </a>
                             </li>
                         </ul> 
                     </div>
