update about me text, add Roboto font to styling

--- a/code files/index.html
+++ b/code files/index.html
@@ -19,10 +19,11 @@
             <div class="placard card">
                 <h3>About me</h3>
                 <main>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
-                    esse cillum dolore eu fugiat nulla pariatur.
+                    <p>
+                    I am Data Analyst, who is now learning how to use HTML, CSS, & JavaScript in communicating with the computer effectively. 
+                    Started my web development journey with The Odin project, and so far it's been going great. I have been able to build a few games
+                    and web app, all hosted github. 
+                    </p>
                 </main>
                 <footer>
                     <ul class ="flx">
