add official header photo

--- a/code files/index.html
+++ b/code files/index.html
@@ -14,6 +14,20 @@
     <div class="container">
         <header>
             <div class="img-container">
+                <img 
+                    src="/assets/official portrait-job.jpeg"
+
+                    srcset="
+                        /assets/portrait_360.jpeg 360w, 
+                        /assets/portrait_480.jpeg 480w,
+                        /assets/portrait_800.jpeg 800w,
+                        /assets/portrait_1000.jpeg 1000w
+                    "
+                    sizes="(max-width: 600px) 100vw,
+                        (max-width: 900px) 50vw,
+                        33vw"
+                
+                 alt="Clematins Nwiibee official">
                 <h1>Clematins Nwiibee</h1>
             </div>
             <div class="placard card">
