add screenshots of projects

--- a/code files/index.html
+++ b/code files/index.html
@@ -31,7 +31,7 @@
                 <h1>Clematins Nwiibee</h1>
             </div>
             <div class="placard card">
-                <h3>About me</h3>
+                <h2>About me</h2>
                 <main>
                     <p>
                     I am Data Analyst, who is now learning how to use HTML, CSS, & JavaScript in communicating with the computer effectively. 
@@ -65,12 +65,12 @@
         </header>
         <main>
             <section id="my-work">
-                <h4>My Work</h4>
+                <h3>My Work</h3>
 
                 <div class="project-grid">
                     <article class="card">
                         <figure>
-                            <img src="#" alt="">
+                            <img src="/assets/restaurant.png" alt="restaurant project homepage">
                         </figure>
                         <div class="flx">
                             <h4>Restaurant page</h4>
@@ -94,7 +94,7 @@
                     </article>
                     <article class="card">
                         <figure>
-                            <img src="#" alt="">
+                            <img src="/assets/Simon_Game.png" alt="simon game">
                         </figure>
                         <div class="flx">
                             <h4>Simon Game</h4>
@@ -118,7 +118,7 @@
                     </article>
                     <article class="card">
                         <figure>
-                            <img src="#" alt="">
+                            <img src="/assets/calculator.png" alt="calculator">
                         </figure>
                         <div class="flx">
                             <h4>Simple Calculator</h4>
@@ -142,7 +142,7 @@
                     </article>
                     <article class="card">
                         <figure>
-                            <img src="#" alt="">
+                            <img src="/assets/library.png" alt="library">
                         </figure>
                         <div class="flx">
                             <h4>Library</h4>
@@ -166,7 +166,7 @@
                     </article>
                     <article class="card">
                         <figure>
-                            <img src="#" alt="">
+                            <img src="/assets/drum kit.png" alt="drum kit">
                         </figure>
                         <div class="flx">
                             <h4>Drum kit</h4>
@@ -190,7 +190,7 @@
                     </article>
                     <article class="card">
                         <figure>
-                            <img src="#" alt="">
+                            <img src="/assets/rock paper scissors.png" alt="rock paper scissor">
                         </figure>
                         <div class="flx">
                             <h4>Rock paper scissor game</h4>
@@ -218,7 +218,7 @@
         <footer>
             <div class="footer-conntainer">
                 <div class="left-footer">
-                    <h4>Contact me</h4>
+                    <h3>Contact me</h3>
                     <p>Please  get in touch if you  think that  our work coule be mutually beneficial.</p>
                     <p>ID's place Estate <br>
                        Uniport Road, Rumualogu, Port Harcourt.
